<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large"
    tools:context=".ui.detail.UserDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivUserAvatar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@color/black" />

            <TextView
                android:id="@+id/tvLabelUserName"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/user_name"
                app:layout_constraintBottom_toBottomOf="@+id/tvUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivUserAvatar" />

            <TextView
                android:id="@+id/tvUserName"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLabelUserName"
                app:layout_constraintTop_toBottomOf="@id/ivUserAvatar"
                tools:text="Fernando Henrique Brasil aslksndasdj aiaad oihasiodho iashs" />

            <TextView
                android:id="@+id/tvLabelReputation"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reputation"
                app:layout_constraintBottom_toBottomOf="@id/tvReputation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvReputation" />

            <TextView
                android:id="@+id/tvReputation"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLabelReputation"
                app:layout_constraintTop_toBottomOf="@id/tvUserName"
                tools:text="Fernando Henrique Brasil aslksndasdj aiaad oihasiodho iashs" />

            <include
                android:id="@+id/inBadges"
                layout="@layout/item_badges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReputation" />

            <TextView
                android:id="@+id/tvLabelLocation"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@id/tvLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLocation" />

            <TextView
                android:id="@+id/tvLocation"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLabelLocation"
                app:layout_constraintTop_toBottomOf="@id/inBadges"
                tools:text="Fernando Henrique Brasil aslksndasdj aiaad oihasiodho iashs" />

            <TextView
                android:id="@+id/tvLabelCreationDate"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creation_date"
                app:layout_constraintBottom_toBottomOf="@id/tvCreationDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvCreationDate" />

            <TextView
                android:id="@+id/tvCreationDate"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLabelCreationDate"
                app:layout_constraintTop_toBottomOf="@id/tvLocation"
                tools:text="Fernando Henrique Brasil aslksndasdj aiaad oihasiodho iashs" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>